Replace list of with arras aslist